<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interactive_marker</name>
  <version>0.1.0</version>
  <description>interactive_marker</description>

  <maintainer email="sangteak601@gmail.com">Sangtaek Lee</maintainer>

  <license>MIT</license>

  <author>Sangtaek Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_resources_panda_description</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>